objects/MarutiCS11__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRP__c</fullName>
        <label>MRP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Date__c</fullName>
        <description>mf date</description>
        <label>Manufacturing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
</CustomObject>